change to intArray and see what happens